--- a/src/styles/MealsContainer.css
+++ b/src/styles/MealsContainer.css
@@ -4,3 +4,9 @@
   margin: auto;
   justify-content: center;
 }
+
+.category {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
