--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,3 +4,14 @@
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.App {
+  flex: 1 0 auto;
+}
+footer {
+  flex-shrink: 0;
+}
