Add styles for meal container

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,6 +11,9 @@ body {
 
 .App {
   flex: 1 0 auto;
+  background: linear-gradient(rgba(48, 54, 51, 0.9), rgba(156, 122, 151, 0.9)),
+    url("../assets/bg.jpg") center center/cover no-repeat;
+  min-height: 100vh;
 }
 footer {
   flex-shrink: 0;
